--- a/recruit.html
+++ b/recruit.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url=https://goo.gl/forms/VXmxAtW2VkG86wWU2"/>
+<meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/1iu1wlEThgIyJJcf3aEpmYt7tL2ulckDCvPgV71kdXiQ/viewform?edit_requested=true"/>
