--- a/index.html
+++ b/index.html
@@ -420,6 +420,15 @@
 				  </div>
 				</div>
 			      </article>
+                              <article class="col-md-2 isotopeItem embedded">
+                                 <div class="team-member" align="center">
+                                    <figure class="member-photo"><img src="img/team/hemant.jpg" alt="" /></figure>
+                                    <div class="team-detail">
+                                      <h4>Hemant Kumar</h4>
+                                      <span>Member, Embedded Team</span>					
+                                    </div>
+                                 </div>
+                              </article>
                            </div>
                         </div>
                      </div>
