--- a/index.html
+++ b/index.html
@@ -348,6 +348,15 @@
                   			</div>
                   		</div>
                   	       </article>
+			       <article class="col-md-2 isotopeItem software">
+                        <div class="team-member" align="center">
+                           <figure class="member-photo"><img src="img/team/Surya.jpg" alt="" /></figure>
+                           <div class="team-detail">
+                              <h4>Surya S Dwivedi</h4>
+                              <span>Member, Software Team</span>             
+                           </div>
+                        </div>
+                             </article>
                   	       <article class="col-md-2 isotopeItem software">
                   		<div class="team-member" align="center">
                   		   <figure class="member-photo"><img src="img/team/koushik.jpg" alt="" /></figure>
