--- a/recruit.html
+++ b/recruit.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/1iu1wlEThgIyJJcf3aEpmYt7tL2ulckDCvPgV71kdXiQ/viewform?edit_requested=true"/>
+<meta http-equiv="Refresh" content="0; url=https://docs.google.com/forms/d/e/1FAIpQLSf_iV5IMDiZBHKYWJnoX62tKkuhVIYbjsezf2X7RYa47kZhPg/viewform?usp=sf_link"/>
