Adding my name again .

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                   			</div>
                   		</div>
                   	       </article>
-                  	       <article class="col-md-2 isotopeItem software">
+			<article class="col-md-2 isotopeItem software">
 			       <div class="team-member" align="center">
         			   <figure class="member-photo"><img src="img/team/Amegh.jpg" alt="" /></figure>
 					 <div class="team-detail">
@@ -375,6 +375,17 @@
         				 </div>
     				</div>
     				</article>
+				   
+                  	       <article class="col-md-2 isotopeItem software">
+                  		<div class="team-member" align="center">
+                  		   <figure class="member-photo"><img src="img/team/moin.jpg" alt="" /></figure>
+                  			<div class="team-detail">
+                  				<h4>Moin Shaikh</h4>
+                  				<span>Member, Software Team</span>
+                  			</div>
+                  		</div>
+                  	       </article>
+				   
 				 <article class="col-md-2 isotopeItem embedded">
                                  <div class="team-member align-center">
                                     <figure class="member-photo"><img src="img/team/Pathak.jpg" alt="" /></figure>
